# Agent4Agents

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md
.github/workflows/: compact-check.yml
agent-context/: 00-system.md  01-constitution.md  02-tier-rubric.md  03-question-protocol.md  04-skill-bindings.md  05-bridge-protocol.md  10-adr-index.md  20-module-index.md  30-active-charter.md
benchmarks/vehicle-interior-cleaning/: .gitignore  MODULE.md  README.md  SPEC.md  pyproject.toml
benchmarks/vehicle-interior-cleaning/configs/: clutter.yaml  tasks.yaml  vehicles.yaml
benchmarks/vehicle-interior-cleaning/src/vic/: __init__.py  config.py  env.py  eval.py  metrics.py  tasks.py
benchmarks/vehicle-interior-cleaning/src/vic/baselines/: __init__.py  heuristic.py
benchmarks/vehicle-interior-cleaning/tests/: test_config.py  test_heuristic.py  test_metrics.py
docs/adr/: 2026-05-05-0001-markdown-data-layer.md  2026-05-05-0002-append-only-governance.md  2026-05-05-0003-claude-code-primary-harness.md  2026-05-05-0004-gstack-integration.md  2026-05-09-0005-vic-benchmark.md  template.md
tasks/: compact-bind.charter.md  compact-bind.evidence.md  pending-decisions.md  readme.charter.md  readme.evidence.md  silent-decisions-log.md  template.charter.md  template.evidence.md  vic-benchmark.charter.md  vic-benchmark.evidence.md
